--- a/_includes/dc/intro.html
+++ b/_includes/dc/intro.html
@@ -1,18 +1,15 @@
 <p>
-  <a href="{{site.dc_site}}">Data Carpentry</a>
-  aims to help researchers get their work done
-  in less time and with less pain
-  by teaching them basic research computing skills.
-  This hands-on workshop will cover basic concepts and tools,
-  including program design, version control, data management,
-  and task automation.
+  <a href="{{site.dc_site}}">Data Carpentry</a> develops and teaches workshops on the fundamental data skills needed to conduct research. Its target audience is researchers who have little to no prior computational experience, and its lessons are domain specific, building on learners' existing knowledge to enable them to quickly apply skills learned to their own research. 
   Participants will be encouraged to help one another
   and to apply what they have learned to their own research problems.
 </p>
+
+<p> 
+  <a href="https://librarycarpentry.github.io/">Library Carpentry</a> is made by librarians to help librarians automate repetitive, boring, error-prone tasks; create, maintain and analyse sustainable and reusable data; work effectively with IT and systems colleagues; better understand the use of software in research; and much more.
 <p align="center">
   <em>
     For more information on what we teach and why,
     please see our paper
-    "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
+    "<a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510">Good Enough Practices for Scientific Computing</a>".
   </em>
 </p>
