--- a/_includes/dc/who.html
+++ b/_includes/dc/who.html
@@ -1,6 +1,8 @@
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is aimed at librarians and archivists as well as graduate students and other researchers. The workshop is 
+  mainly organised for staff and students affiliated with the University of the Free State, but is open to staff and students 
+  from other public universities in South Africa as well.
   <strong>
     You don't need to have any previous knowledge of the tools
     that will be presented at the workshop.
