--- a/_includes/dc/syllabus.html
+++ b/_includes/dc/syllabus.html
@@ -1,27 +1,24 @@
 <div class="row">
   <div class="col-md-6">
-    <h3 id="syllabus-shell">The Unix Shell</h3>
+    <h3 id="syllabus-spreadsheet">Using spreadsheet programs for scientific data</h3>
     <ul>
-      <li>Files and directories</li>
-      <li>History and tab completion</li>
-      <li>Pipes and redirection</li>
-      <li>Looping over files</li>
-      <li>Creating and running shell scripts</li>
+      <li>Formatting data & problems</li>
+      <li>Dates as data</li>
+      <li>Quality control</li>
+      <li>Exporting data</li>
+      <li>Data format caveats</li>
       <li>Finding things</li>
-      <li><a href="{{site.swc_pages}}/shell-novice/reference">Reference...</a></li>
+      <li><a href="{{site.dc_pages}}/spreadsheet-dh-lesson/reference">Reference...</a></li>
     </ul>
   </div>
   <div class="col-md-6">
-    <h3 id="syllabus-python">Programming in Python</h3>
+    <h3 id="syllabus-r">Introduction to R</h3>
     <ul>
-      <li>Using libraries</li>
-      <li>Working with arrays</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Defensive programming</li>
-      <li>Using Python from the command line</li>
-      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
+      <li>Starting with data</li>
+      <li>Aggregating and analyzing data with dplyr</li>
+      <li>Data visualisation with ggplot2</li>
+      <li>R and Databases</li>
+      <li><a href="{{site.swc_pages}}/R-ecology-lesson/reference">Reference...</a></li>
     </ul>
   </div>
   <!--
@@ -53,6 +50,7 @@
 </div>
 
 <div class="row">
+  <!--
   <div class="col-md-6">
     <h3 id="syllabus-git">Version Control with Git</h3>
     <ul>
@@ -81,16 +79,18 @@
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference">Reference...</a></li>
     </ul>
   </div>
-  <!--
+  -->
   <div class="col-md-6">
-    <h3 id="syllabus-r">Open Refine</h3>
+    <h3 id="syllabus-r">Cleaning data with OpenRefine</h3>
     <ul>
-      <li>Introduction to OpenRefine</li>
+      <li>Introduction</li>
       <li>Importing data</li>
-      <li>Basic functions</li>
-      <li>Advanced Functions</li>
-      <li><a href="{{site.lc_pages}}library-openrefine/reference">Reference...</a></li>
+      <li>Layout of OpenRefine, Rows vs Records</li>
+      <li>Faceting and filtering</li>
+      <li>Introduction to Transformations</li>
+      <li>Writing Transformations</li>
+      <li>Advanced OpenRefine functions</li>
+      <li><a href="{{site.lc_pages}}/library-openrefine/reference">Reference...</a></li>
     </ul>
   </div>
-  -->
 </div>
