--- a/_includes/dc/syllabus.html
+++ b/_includes/dc/syllabus.html
@@ -8,7 +8,7 @@
       <li>Exporting data</li>
       <li>Data format caveats</li>
       <li>Finding things</li>
-      <li><a href="{{site.dc_pages}}/spreadsheet-dh-lesson/reference">Reference...</a></li>
+      <li><a href="https://dh-southernafrica.github.io/spreadsheet-dh-lesson/reference">Reference...</a></li>
     </ul>
   </div>
   <div class="col-md-6">
@@ -18,7 +18,7 @@
       <li>Aggregating and analyzing data with dplyr</li>
       <li>Data visualisation with ggplot2</li>
       <li>R and Databases</li>
-      <li><a href="{{site.swc_pages}}/R-ecology-lesson/reference">Reference...</a></li>
+      <li><a href="http://www.datacarpentry.org/R-ecology-lesson/reference">Reference...</a></li>
     </ul>
   </div>
   <!--
@@ -90,7 +90,7 @@
       <li>Introduction to Transformations</li>
       <li>Writing Transformations</li>
       <li>Advanced OpenRefine functions</li>
-      <li><a href="{{site.lc_pages}}/library-openrefine/reference">Reference...</a></li>
+      <li><a href="https://librarycarpentry.github.io/lc-open-refine/reference">Reference...</a></li>
     </ul>
   </div>
 </div>
